# IVS-project-2024-2025

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  calculator.cpp  calculator.h  helpdialog.cpp  hodnoceni.txt  main.cpp  mathlib.cpp  mathlib.h  skutecnost.txt  stddev.cpp  tdd_test_math_library.cpp
install/: skibidicalculator-1.0-Linux.deb  stddev-1.0-Linux.deb
plan/: xcapka06_xjanou24_xlepes00_xstranj00_plan.txt
src/: CMakeLists.txt  Doxyfile  Makefile  calculator.cpp  helpdialog.h  tdd_test_math_library.cpp
